--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script src="//at.alicdn.com/t/font_3157290_rizszwyrvya.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <!-- 括号里面是基础路径到repblic -->
+      <script src="<%= BASE_URL %>js/rem.js"></script>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
